--- Operating System, Graphics card ---
Windows 7, 64 bit, NVIDIA GeForce GTX 285
--- Blender version with error, and version that worked ---
official 2.66 release, versions before 2.66 worked correctly
--- Short description of error ---
When I try to render a scene (interactive preview in the viewport), where there's nothing visible in it, it's stuck on the first pass and keeps re-rendering it. The F12 rendering works fine, though.
--- Steps for others to reproduce the error (preferably based on attached .blend file) ---
In the attached file I packed a texture which is in the environment slot. So just switch to rendered in the viewport shading. It doesn't need to be a texture in the background, the error is there with single color or sky environment too, this is just a more clearer case. When any visible object is added it renders correctly.
Description
Description