Fix #34421: cycles viewport render stuck with no objects in the scene.